# mcsh

./: .clangd  .clangd.example  .gitignore  ISSUES.md  Imakefile  LICENSE  Makefile.in  NOTICE  PLAN.md  README.md  aclocal.m4  alacritty.toml  colors-alacritty.toml  complete.mcsh  config.h.in  config_f.h  configure  configure.ac  csh-mode.el  dch-template  dch-template.in  dot.login  dot.mcshrc  dot.tcshrc  dotlock.c  ed.chared.c  ed.decls.h  ed.defns.c  ed.h  ed.init.c  ed.inputl.c  ed.refresh.c  ed.screen.c  ed.syntax.c  ed.syntax.h  ed.term.c  ed.term.h  ed.xmap.c  fix_docs_2.py  fix_docs_5.py  (+74 more)
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
acaux/: install-sh
docs/: SCRIPTING_GUIDE.md  builtins.md  configuration.md  history_substitution.md  index.md  interactive_use.md  introduction.md  scripting_guide.md  syntax_reference.md
m4/: lib-prefix.m4  po.m4
nls/: Makefile.in
nls/C/: set11  set30
nls/finnish/: set30
nls/italian/: set30  set7
nls/ja/: set30
nls/pl/: README  set30
nls/russian/: set30
nls/spanish/: set30
nls/ukrainian/: set30
scratch/: git_test  git_test.c
tests/: lib_locale.sh  run_tests.sh  t001_vars.sh  t002_overflow.sh  t003_shortcircuit.sh  t004_pipe_to_var.sh  t005_cd_stack.sh  t006_function_builtin.sh  t007_arith_rsh.sh  t008_unset_modifiers.sh  t009_unicode_vars.sh  t010_unicode_glob.sh  t011_unicode_dollar_lt.sh  t012_unicode_backtick.sh  t013_unicode_invalid_recovery.sh  t014_unicode_script_source.sh  t015_dot_mcshrc_ls_colors.sh  t015_dotmcshrc_ls_colors.sh  t015_heredoc_mkstemp.sh  t015_killdup.sh  t016_dot_mcshrc_ls_alias_ostype.sh  t016_dotmcshrc_ls_alias_ostype.sh
wiki/: 01-Introduction.md  02-Basic-Syntax.md  03-Variables-and-Arrays.md  04-Control-Flow.md  05-Operators-and-File-Tests.md  06-Advanced-Features.md  07-POSIX-vs-CShell.md  Home.md
